<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.FormLoginActivity">

    <ImageView
        android:id="@+id/imgLogin"
        android:layout_width="match_parent"
        android:layout_height="295dp"
        android:scaleType="centerCrop"
        android:src="@drawable/img_login"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/sign_in"
        android:textSize="20sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="20dp"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="20dp"
        tools:ignore="Autofill,HardcodedText" />

    <Button
        android:id="@+id/btLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="30dp"
        android:enabled="false"
        android:background="@drawable/shape_form_login"
        android:padding="15dp"
        android:text="@string/sign_in2"
        android:textColor="@color/white" />
    
</LinearLayout>